--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>示例</title>
-</head>
-<body>
-  <h1>welcome to my website</h1>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><link rel="shortcut icon" type=image/x-icon href=static/favicon.ico><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><title>试玩大咖 - 你的专属试玩平台</title><link href=./static/css/app.86526e2401bc0da98a2ff41f2d4d67ee.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.70d8720476e918764c08.js></script><script type=text/javascript src=./static/js/vendor.75ca4c08ec83ed3e5d11.js></script><script type=text/javascript src=./static/js/app.e2b14de5778a9a478b25.js></script></body></html>
